# android_opencv_ndk

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opencv_test4/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gender_edgetpu.tflite  native-lib.cpp  tensorflow.cpp  tensorflow_c.cpp  tensorflow_face.cpp  tensorflow_face.h  test.txt
app/src/main/cpp/libusb/arm64-v8a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/armeabi-v7a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/x86_64/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/java/com/example/opencv_test4/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/opencv_test4/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myapplication/: build.gradle
